[Bug #19558] Allow ASCII range to mix with Unicode dump